--- a/frontend-personas/angular.json
+++ b/frontend-personas/angular.json
@@ -57,7 +57,7 @@
               "namedChunks": true
             }
           },
-          "defaultConfiguration": "production"
+          "defaultConfiguration": "development"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -97,5 +97,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "b45386ef-cb07-4bf6-9b38-72fef41f325b"
   }
 }
